mjs/tests/invalid_syntax/arrow_functions.js
let f = () => 1;
let g = (n) => {
  return n;
};

f();
g(2);
